Update 1.2.0 with ForestAura and ThunderAura light (#28)
* Started working of ForestAura Light. Added forest aura effect prototype, from the testing in the other branch

* Moved mixins inside packages, made players immune to suffocation damage while they have ForestAuraEffect

* Added icon (prototype), added a new feature where at higher levels enemies and allies glow different colors (WIP)

* Now colors of enemies and allies are configurable, Fixed YACL screen

* Added the ForestPuff mechanism, added ForestAuraLight to the determineType thing and the activate one. Add the colored puff particle etc

* Added ForestAura stuff to BalanceConfig and BrewRecipes, added the CheckUtils checkForestAura check (unused), started to work on the triggering (very WIP)

* Fixed wrong duration of Forest aura effect

* Added the triggers to the ForestAuraLight

* Added icon and particle, also updated the forest aura status effect icon

* Added runes, cgl effect, fixed runes rendering off-center

* notes

* Added puff sounds, fixed them. Now the puffs only spawn in non-obstructed places. And also spawn at lower power levels. Added an interval between each puff. Improved javadoc. Fixed the targets from enemies to all. Removed unused debug messages

* Added the Intoxicated effect, used in the purple puffs. It will display a drunk-like shader and randomize controls based on the amplifier level.
Yet to implement the warning message for motion sickness

* Added warning message to disable the intoxicated shader

* Update build.yml

* Added the ForestAura Light's sound effect

* First working iteration of the color overlay thingy

* Added proper color overlay when triggering the Aura. (first person arm in WIP, not working)

* Added color overlay to th first person player arm

* Cleared some todos. Moved the trigger item/block lists to tags. Now the puff effects won't apply to other players with ForestAura light, spawning particles and a message to them instead. The light rays will now always